tests/good/vardec-in-let.tig
let
	var a := 4
in
end