tests/bad/nil_type.tig
let var a : nil := ()
in
  1
end
